Added CRUD for Modules

--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -37,6 +37,10 @@
         </footer>
         <li>@Html.ActionLink("Temporärt Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Temporärt Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+
+        <li>@Html.ActionLink("Temporärt Kurser", "Index", "Courses")</li>
+        <li>@Html.ActionLink("Temporärt Moduler", "Index", "Modules")</li>
+
     </div>
 
     @Scripts.Render("~/bundles/jquery")
