--- a/LMS System/Views/Modules/Delete.cshtml
+++ b/LMS System/Views/Modules/Delete.cshtml
@@ -1,13 +1,14 @@
-﻿@model LMS_System.Models.Course
+﻿@model LMS_System.Models.Module
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Course</h4>
+    <h4>Module</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -38,26 +39,18 @@
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
 
-
         <dd>
             @Html.DisplayFor(model => model.EndDate)
         </dd>
 
-        <dt>
-            Manuellt tillagt @Html.DisplayNameFor(model => model.Modules):
-        </dt>
-
-        <dd>
-            @foreach (var m in Model.Modules)
-            {
-                @m.Name<br />
-            }
-        </dd>
-
-
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
