--- a/LMS System/Views/Modules/Details.cshtml
+++ b/LMS System/Views/Modules/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model LMS_System.Models.Course
+﻿@model LMS_System.Models.Module
 
 @{
     ViewBag.Title = "Details";
@@ -7,7 +7,7 @@
 <h2>Details</h2>
 
 <div>
-    <h4>Course</h4>
+    <h4>Module</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -38,22 +38,9 @@
             @Html.DisplayNameFor(model => model.EndDate)
         </dt>
 
-
         <dd>
             @Html.DisplayFor(model => model.EndDate)
         </dd>
-
-        <dt>
-            Manuellt tillagt @Html.DisplayNameFor(model => model.Modules):
-        </dt>
-
-        <dd>
-            @foreach (var m in Model.Modules)
-            {
-                @m.Name<br />
-            }
-        </dd>
-
 
     </dl>
 </div>
