--- a/LMS System/Views/Modules/Edit.cshtml
+++ b/LMS System/Views/Modules/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model LMS_System.Models.Course
+﻿@model LMS_System.Models.Module
 
 @{
     ViewBag.Title = "Edit";
 }
 
-<h2>Redigera kurs</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
@@ -12,6 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h4>Module</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -50,7 +51,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Uppdatera" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
