Visning av kurser för studenter redigerat

--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -6,9 +6,13 @@
 
 <h2>Index</h2>
 
+@if (User.IsInRole("teacher"))
+    {
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+}
+
 <table class="table">
     <tr>
         <th>
@@ -40,11 +44,15 @@
         <td>
             @Html.DisplayFor(modelItem => item.EndDate)
         </td>
+
+        @if (User.IsInRole("teacher"))
+        {
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
+        }
     </tr>
 }
 
