--- a/LMS System/Views/Account/RegisterStudent.cshtml
+++ b/LMS System/Views/Account/RegisterStudent.cshtml
@@ -54,6 +54,9 @@
             </div>
         </div>
 
+        <input type="hidden" name="role" value="student" />
+        @Html.Hidden("role", "student")
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
