--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -35,11 +35,18 @@
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
-        <li>@Html.ActionLink("Temporärt Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Temporärt Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <p>Färdiga User Stories:</p>
+        <ul>
+            <li>@Html.ActionLink("Som lärare vill jag kunna lägga till elever", "RegisterStudent", "Account")</li>
+            <li>@Html.ActionLink("Som lärare vill jag kunna lägga till andra lärare", "RegisterTeacher", "Account")</li>
+            <li>@Html.ActionLink("Som lärare vill jag kunna lägga till/redigera/ta bort moduler", "Index", "Modules")</li>
+            <li>@Html.ActionLink("Som student vill jag kunna se alla moduler jag läser", "Index", "Modules")</li>
 
-        <li>@Html.ActionLink("Temporärt Kurser", "Index", "Courses")</li>
-        <li>@Html.ActionLink("Temporärt Moduler", "Index", "Modules")</li>
+            <li>@Html.ActionLink("Temporärt Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+
+            <li>@Html.ActionLink("Temporärt Kurser", "Index", "Courses")</li>
+            <li>@Html.ActionLink("Temporärt Moduler", "Index", "Modules")</li>
+        </ul>
 
     </div>
 
