--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("LMS System", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -33,20 +33,23 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - LMS System</p>
         </footer>
         <p>Färdiga User Stories:</p>
         <ul>
+            <li>@Html.ActionLink("Som användare vill jag kunna logga in", "Login", "Account")</li>
             <li>@Html.ActionLink("Som lärare vill jag kunna lägga till elever", "RegisterStudent", "Account")</li>
             <li>@Html.ActionLink("Som lärare vill jag kunna lägga till andra lärare", "RegisterTeacher", "Account")</li>
             <li>@Html.ActionLink("Som lärare vill jag kunna lägga till/redigera/ta bort moduler", "Index", "Modules")</li>
-            <li>@Html.ActionLink("Som student vill jag kunna se alla moduler jag läser", "Index", "Modules")</li>
-
-            <li>@Html.ActionLink("Temporärt Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-
-            <li>@Html.ActionLink("Temporärt Kurser", "Index", "Courses")</li>
-            <li>@Html.ActionLink("Temporärt Moduler", "Index", "Modules")</li>
+            <li>@Html.ActionLink("Som lärare vill jag kunna lägga till/redigera/ta bort kurser", "Index", "Courses")</li>
         </ul>
+
+
+        <p>Temporära övriga länkar:</p>
+        <ul>
+            <li>@Html.ActionLink("Log in", "Login", "Account")</li>
+            <li>@Html.ActionLink("Kurser", "Index", "Courses")</li>
+         </ul>
 
     </div>
 
