--- a/LMS System/Views/Account/RegisterTeacher.cshtml
+++ b/LMS System/Views/Account/RegisterTeacher.cshtml
@@ -7,7 +7,7 @@
 <h2>Register Teacher</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     
