--- a/LMS System/Views/AppUsers/Edit.cshtml
+++ b/LMS System/Views/AppUsers/Edit.cshtml
@@ -15,7 +15,7 @@
 
 
     <div class="form-horizontal">
-        <h4>AppUsers</h4>
+        <h4>Users</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -28,7 +28,8 @@
         @Html.HiddenFor(model => model.TwoFactorEnabled)
         @Html.HiddenFor(model => model.LockoutEndDateUtc)
         @Html.HiddenFor(model => model.AccessFailedCount)
-        @Html.EditorFor(model => model.UserName
+        @Html.HiddenFor(model => model.LockoutEnabled)
+        @Html.HiddenFor(model => model.UserName)
 
 
 
@@ -63,17 +64,6 @@
                 @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.LockoutEnabled, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.LockoutEnabled)
-                    @Html.ValidationMessageFor(model => model.LockoutEnabled, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-
 
         <div class="form-group">
             @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
