--- a/LMS System/Views/AppUsers/Index.cshtml
+++ b/LMS System/Views/AppUsers/Index.cshtml
@@ -1,58 +1,42 @@
 ﻿@model IEnumerable<LMS_System.Models.AppUsers>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "User Management";
 }
 
-<h2>Index</h2>
+<h2>User Management</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
+    @if (User.IsInRole("teacher"))
+    {
+        <p>
+            @Html.ActionLink("Add teacher", "RegisterTeacher", "Account", null, new { @class = "btn btn-default" })
+            @Html.ActionLink("Add student", "RegisterStudent", "Account", null, new { @class = "btn btn-default" })
+            <a href="?role=student&orderby=@HttpContext.Current.Request.QueryString["orderby"]" class="btn btn-default">Show students</a>
+            <a href="?role=teacher&orderby=@HttpContext.Current.Request.QueryString["orderby"]" class="btn btn-default">Show teachers</a>
+            <a href="?role=&orderby=@HttpContext.Current.Request.QueryString["orderby"]" class="btn btn-default">Show all users</a>
+        </p>
+    }
+
+
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            <a href="?orderby=@Html.DisplayNameFor(model => model.FirstName)&role=@HttpContext.Current.Request.QueryString["role"]">@Html.DisplayNameFor(model => model.FirstName)</a>
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
+            <a href="?orderby=@Html.DisplayNameFor(model => model.LastName)&role=@HttpContext.Current.Request.QueryString["role"]">@Html.DisplayNameFor(model => model.LastName)</a>
+</th>
         <th>
-            @Html.DisplayNameFor(model => model.TimeOfRegistration)
-        </th>
+            <a href="?orderby=@Html.DisplayNameFor(model => model.Email)&role=@HttpContext.Current.Request.QueryString["role"]">@Html.DisplayNameFor(model => model.Email)</a>
+</th>
         <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
+            <a href="?orderby=@Html.DisplayNameFor(model => model.PhoneNumber)&role=@HttpContext.Current.Request.QueryString["role"]">@Html.DisplayNameFor(model => model.PhoneNumber)</a>
+</th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailConfirmed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PasswordHash)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SecurityStamp)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PhoneNumberConfirmed)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TwoFactorEnabled)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LockoutEndDateUtc)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LockoutEnabled)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.AccessFailedCount)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UserName)
-        </th>
+            <a href="?orderby=@Html.DisplayNameFor(model => model.RoleName)&role=@HttpContext.Current.Request.QueryString["role"]">@Html.DisplayNameFor(model => model.RoleName)</a>
+</th>
         <th></th>
     </tr>
 
@@ -65,46 +49,27 @@
             @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.TimeOfRegistration)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.EmailConfirmed)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PasswordHash)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SecurityStamp)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PhoneNumber)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.PhoneNumberConfirmed)
+            @Html.DisplayFor(modelItem => item.RoleName )
         </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TwoFactorEnabled)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEndDateUtc)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LockoutEnabled)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.AccessFailedCount)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UserName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
+
+
+        @if (User.IsInRole("teacher"))
+        {
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) | 
+
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        }
+
     </tr>
 }
 
