Added support for breadcrums

--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -30,6 +30,11 @@
         </div>
     </div>
     <div class="container body-content">
+        <!-- #region Breadcrumb -->
+        @{ 
+            @Html.Raw(Html.BuildBreadcrumbNavigation());
+        }
+        <!-- #endregion -->
         @RenderBody()
         <hr />
         <footer>
