- "Add new teacher" page added - Navigational changes

--- a/LMS System/Views/AppUsers/Edit.cshtml
+++ b/LMS System/Views/AppUsers/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit @Html.DisplayFor(model => model.RoleName)</h2>
 
 
 @using (Html.BeginForm())
@@ -15,7 +15,6 @@
 
 
     <div class="form-horizontal">
-        <h4>Users</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -82,7 +81,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to registration", "RegisterTeacher", "Account",null, null)
 </div>
 
 @section Scripts {
