--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -9,7 +9,8 @@
 @if (User.IsInRole("teacher"))
     {
 <p>
-    @Html.ActionLink("Add new course", "Create")
+    @Html.ActionLink("Add new course", "Create", null, new { @class = "btn btn-default" })
+    @Html.ActionLink("Add teacher", "RegisterTeacher", "Account", null, new { @class = "btn btn-default" })
 </p>
 }
 
