--- a/LMS System/Views/Account/RegisterTeacher.cshtml
+++ b/LMS System/Views/Account/RegisterTeacher.cshtml
@@ -4,8 +4,60 @@
     ViewBag.Title = "Register Teacher";
 }
 
-<h2>Register Teacher</h2>
+<h2>Teachers</h2>
 
+
+@{ 
+    var AppUser = ViewBag.Appuser;
+}
+
+
+<table class="table">
+    <tr>
+        <th>
+            <a href="?orderby=FirstName">FirstName</a>
+        </th>
+        <th>
+            <a href="?orderby=LastName">LastName</a>
+        </th>
+        <th>
+            <a href="?orderby=Email">Email</a>
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in AppUser)
+    {
+        <tr>
+            <td>
+                @item.FirstName
+            </td>
+            <td>
+                @item.LastName
+            </td>
+            <td>
+                <a href="mailto:@item.Email">@item.Email</a>
+            </td>
+
+
+            @if (User.IsInRole("teacher"))
+            {
+                <td>
+                    @Html.ActionLink("Edit", "Edit", "Appusers",  new { id = item.Id }, null) |
+
+                    @Html.ActionLink("Details", "Details", "Appusers", new { id = item.Id }, null) |
+
+                    @Html.ActionLink("Delete", "Delete", "Appusers", new { id = item.Id }, null)
+                </td>
+            }
+
+        </tr>
+    }
+
+</table>
+
+
+<h2>Register Teacher</h2>
 
 @using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
@@ -59,15 +111,13 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Register" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
