--- a/LMS System/Views/Shared/_Layout.cshtml
+++ b/LMS System/Views/Shared/_Layout.cshtml
@@ -17,7 +17,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("LMS System", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                
+                <a href="Courses/"><img src="~/Images/logo-lexicon2x.gif" width="110" height="38"/></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
