Added listing of modules in the  course details view plus functionality to edit, delete and show module details.

--- a/LMS System/Views/Modules/Index.cshtml
+++ b/LMS System/Views/Modules/Index.cshtml
@@ -11,7 +11,7 @@
 @if (User.IsInRole("teacher"))
 {
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add New", "Create")
 </p>
 }
 <table class="table">
