--- a/LMS System/Views/Modules/Details.cshtml
+++ b/LMS System/Views/Modules/Details.cshtml
@@ -4,10 +4,9 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h3>Details for module @Model.Name</h3>
 
 <div>
-    <h4>Module</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
