--- a/LMS System/Views/Account/CourseTeacherView.cshtml
+++ b/LMS System/Views/Account/CourseTeacherView.cshtml
@@ -10,6 +10,68 @@
 
 
 
+@{
+    var AppUser = ViewBag.Appuser;
+}
+
+<hr/>
+<h2>Students in course</h2>
+
+<table class="table">
+    <tr>
+        <th>
+            <a href="?orderby=FirstName">FirstName</a>
+        </th>
+        <th>
+            <a href="?orderby=LastName">LastName</a>
+        </th>
+        <th>
+            <a href="?orderby=Email">Email</a>
+        </th>
+        <th></th>
+    </tr>
+
+    @foreach (var item in AppUser)
+    {
+    <tr>
+        <td>
+            @item.FirstName
+        </td>
+        <td>
+            @item.LastName
+        </td>
+        <td>
+            <a href="mailto:@item.Email">@item.Email</a>
+        </td>
+
+
+
+        @if (User.IsInRole("teacher"))
+        {
+        <td>
+            @Html.ActionLink("Edit", "Edit", "Appusers",  new { id = item.Id }, null) |
+
+            @Html.ActionLink("Details", "Details", "Appusers", new { id = item.Id }, null) |
+
+            @Html.ActionLink("Delete", "Delete", "Appusers", new { id = item.Id }, null)
+        </td>
+        }
+
+    </tr>
+    }
+
+</table>
+
+
+
+
+
+
+
+
+
+
+
 
 <h2>Register Student</h2>
 
@@ -69,7 +131,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Register" class="btn btn-default" />
             </div>
         </div>
     </div>
