--- a/LMS System/Views/Activities/Index.cshtml
+++ b/LMS System/Views/Activities/Index.cshtml
@@ -45,11 +45,17 @@
                 {
                 <div>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })|
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
                 </div>
             }
-        </td>
+            @if (User.IsInRole("student"))
+            {
+                <div>
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                </div>
+            }
+</td>
     </tr>
 }
 
