Minor redirect fixes

--- a/LMS System/Views/Home/Index.cshtml
+++ b/LMS System/Views/Home/Index.cshtml
@@ -5,7 +5,8 @@
 <div class="jumbotron">
     <h1>LEXICON</h1>
 </div>
-
+@User.IsInRole("teacher")
+@User.IsInRole("student")
 <div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
