Commented out some code in AccountController.cs

--- a/LMS System/Views/Courses/Error.cshtml
+++ b/LMS System/Views/Courses/Error.cshtml
@@ -3,5 +3,5 @@
     ViewBag.Title = "Error";
 }
 
-<h2>Error - You don't attend any courses</h2>
+<h2>Error - You are not enrolled in any course</h2>
 
