--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -36,7 +36,7 @@
         <td>
             @Html.DisplayFor(modelItem => item.Name)
         </td>
-        <td>
+        <td width="35%">
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
