--- a/LMS System/Views/Modules/Details.cshtml
+++ b/LMS System/Views/Modules/Details.cshtml
@@ -43,6 +43,12 @@
 
     </dl>
 </div>
+@{
+    foreach (var activity in Model.Activities)
+    {
+        @activity.Name;
+    }
+}
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
