--- a/LMS System/Views/Account/CourseTeacherView.cshtml
+++ b/LMS System/Views/Account/CourseTeacherView.cshtml
@@ -3,9 +3,9 @@
 
 <h2>@ViewData["Name"]</h2>
 
-@*@var ModulesNames =  (string[]) ViewData["ModuleNames"] as string[];
+@var ModulesNames =  (string[]) ViewData["ModuleNames"];
 @ModulesNames[0];
-@ModulesNames[1];*@
+@ModulesNames[1];
 
 
 <h3>@ViewData["Modulename"]</h3>
