--- a/LMS System/Views/Account/CourseTeacherView.cshtml
+++ b/LMS System/Views/Account/CourseTeacherView.cshtml
@@ -51,7 +51,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", "Appusers",  new { id = item.Id }, null) |
 
-            @Html.ActionLink("Details", "Details", "Appusers", new { id = item.Id }, null) |
+            @Html.ActionLink("Details", "Details", "Appusers", new { id = item.Id, CourseId = @ViewData["Id"] }, null) |
 
             @Html.ActionLink("Delete", "Delete", "Appusers", new { id = item.Id }, null)
         </td>
