--- a/LMS System/Views/Account/CourseTeacherView.cshtml
+++ b/LMS System/Views/Account/CourseTeacherView.cshtml
@@ -2,11 +2,11 @@
 
 
 
-<h2>@ViewData["Name"]</h2>
+<h2>Course: @ViewData["Name"]</h2>
 
-<h3>@ViewData["Modulename"]</h3>
+<!--h3>@ViewData["Modulename"]</h3-->
 
-<h4>@ViewData["Id"]</h4>
+<!--h4>@ViewData["Id"]</h4--->
 
 
 
