Show details courses

--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -54,6 +54,10 @@
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
         }
+        else
+        {
+            @Html.ActionLink("Details", "Details", new { id = item.Id })
+        }
     </tr>
 }
 
