--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -46,18 +46,23 @@
             @Html.DisplayFor(modelItem => item.EndDate)
         </td>
 
-        @if (User.IsInRole("teacher"))
-        {
+
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-        }
-        else
-        {
-            @Html.ActionLink("Details", "Details", new { id = item.Id })
-        }
+            @if (User.IsInRole("teacher"))
+            {
+                <div>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </div>
+            }
+            else
+            {
+                <div>
+                    @Html.ActionLink("Details", "Details", new { id = item.Id })
+                </div>
+            }
+</td>
     </tr>
 }
 
