--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -46,7 +46,7 @@
         </dd>
 
         <dt>
-            Moduler
+            Modules
         </dt>
 
         <dd>
@@ -86,7 +86,7 @@
                                                    new { id = Model.Id, name = Model.Name }, 
                                                    new { @class = "btn btn-default" })
                                  @Html.ActionLink("Add student", "CourseTeacherView", "Account",
-                                                   new { id = Model.Id, orderBy ="firstname" },
+                                                   new { id = Model.Id, orderBy ="firstname"},
                                                    new { @class = "btn btn-default" })
                              </div>
                         </td>
