--- a/LMS System/Views/Courses/CourseTeacherView.cshtml
+++ b/LMS System/Views/Courses/CourseTeacherView.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Register Student";
 }
 
-<h2>Register Student</h2>
+<h2>Register Student for the course @ViewBag.Name</h2>
 
 
 @using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
