--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -57,7 +57,9 @@
                     {
                         <tr>
                             <td>
-                                @Html.ActionLink(@module.Name, "Details", "Modules", new { id = module.Id }, null)
+                                @Html.ActionLink(@module.Name, "Details", "Modules",
+                                                 new { id = module.Id, courseID = Model.Id },
+                                                 null)
                             </td>
                         </tr>
             }
@@ -68,7 +70,9 @@
 {
                         <tr>
                             <td>
-                                @Html.ActionLink(@module.Name, "Details", "Modules", new { id = module.Id }, null)
+                                @Html.ActionLink(@module.Name, "Details", "Modules", 
+                                                 new { id = module.Id, courseID = Model.Id }, 
+                                                 null)
                             </td>
                             <td width="30">
                             </td>
