--- a/LMS System/Views/Activities/Index.cshtml
+++ b/LMS System/Views/Activities/Index.cshtml
@@ -7,7 +7,15 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @{
+        if (User.IsInRole("teacher"))
+        {
+            var mid = Model.FirstOrDefault(m => true).ModuleId;
+            <div>
+                @Html.ActionLink("Create New", "Create", new { ModuleId = mid })
+            </div>
+        }
+    }
 </p>
 <table class="table">
     <tr>
@@ -25,8 +33,11 @@
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
+   
+@foreach (var item in Model)
+{
+    
+   @Html.Hidden("ModuleId", item.ModuleId)
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
