--- a/LMS System/Views/Courses/Index.cshtml
+++ b/LMS System/Views/Courses/Index.cshtml
@@ -50,11 +50,15 @@
         <td>
             @if (User.IsInRole("teacher"))
             {
+              
+        
                 <div>
+              
+                    @*@Html.Action("CourseTeacherView","Accounts" )*@
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                </div>
+                    </div>
             }
             else
             {
