--- a/LMS System/Views/Courses/CourseTeacherView.cshtml
+++ b/LMS System/Views/Courses/CourseTeacherView.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Register Student";
 }
 
-<h2>Register Student for the course @ViewBag.Name</h2>
+<h3>Register a student for the course @ViewBag.Name</h3>
 
 
 @using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -67,7 +67,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to course", "Index")
 </div>
 
 @section Scripts {
