--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -89,7 +89,7 @@
                                  @Html.ActionLink("Add module", "Create", "Modules", 
                                                    new { id = Model.Id, name = Model.Name }, 
                                                    new { @class = "btn btn-default" })
-                                 @Html.ActionLink("Add student", "CourseTeacherView", "Account",
+                                 @Html.ActionLink("View students", "CourseTeacherView", "Account",
                                                    new { id = Model.Id, orderBy ="firstname"},
                                                    new { @class = "btn btn-default" })
                              </div>
