--- a/LMS System/Views/Modules/Create.cshtml
+++ b/LMS System/Views/Modules/Create.cshtml
@@ -61,7 +61,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to course", "Details", "Courses", new { id = ViewBag.CourseId }, null)
 </div>
 
 @section Scripts {
