--- a/LMS System/Views/Account/CourseTeacherView.cshtml
+++ b/LMS System/Views/Account/CourseTeacherView.cshtml
@@ -1,9 +1,18 @@
 ﻿@model LMS_System.Models.RegisterViewModel
 
-
-<h2>@ViewData["Name"]</h2>
-
 <h2>Course: @ViewData["Name"]</h2>
+
+
+<h3> Modules </h3>
+@foreach (var moduleName in (List<string>)ViewData["ModuleNames"])
+{
+
+    <li>
+
+        @moduleName
+    </li>
+}
+
 
 <!--h3>@ViewData["Modulename"]</h3-->
 
