--- a/LMS System/Views/Activities/Create.cshtml
+++ b/LMS System/Views/Activities/Create.cshtml
@@ -37,7 +37,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control", @min = Model.Module.StartDate.ToShortDateString(), @max = Model.Module.EndDate.ToShortDateString() } })
+                <script type="text/javascript">
+                    $('#StartDate').change(function () {
+                        $("#EndDate").attr("min", $('#StartDate').val());
+                    });
+                </script>
                 @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,7 +50,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control", @min = Model.Module.StartDate.ToShortDateString(), @max = Model.Module.EndDate.ToShortDateString() } })
                 @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -59,7 +64,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Details", "Modules", new { Id = ViewBag.ModuleId }, null)
 </div>
 
 @section Scripts {
