--- a/LMS System/Views/Activities/Delete.cshtml
+++ b/LMS System/Views/Activities/Delete.cshtml
@@ -50,7 +50,8 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+
+            @Html.ActionLink("Back to List", "Details", "Modules", new { Id = Model.ModuleId }, null)
         </div>
     }
 </div>
