--- a/LMS System/Views/Activities/Details.cshtml
+++ b/LMS System/Views/Activities/Details.cshtml
@@ -45,6 +45,9 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+@if (User.IsInRole("teacher"))
+{
+    @Html.ActionLink("Edit", "Edit", new { id = Model.Id })    <span> | </span>
+}
+    @Html.ActionLink("Back to List", "Details", "Modules", new { Id = Model.ModuleId }, null)
 </p>
