--- a/LMS System/Views/Modules/Edit.cshtml
+++ b/LMS System/Views/Modules/Edit.cshtml
@@ -59,7 +59,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Details", "Courses", new {Id = Model.Id }, null)
 </div>
 
 @section Scripts {
