Modules fixed - Validation and limitations of dates - Minor fixes

--- a/LMS System/Views/Courses/Details.cshtml
+++ b/LMS System/Views/Courses/Details.cshtml
@@ -10,6 +10,16 @@
 <h3>Details for course @Model.Name</h3>
 
 <div>
+    @Html.ActionLink("Add module", "Create", "Modules",
+                                                   new { id = Model.Id },
+                                                   new { @class = "btn btn-default" })
+    @Html.ActionLink("Add student", "CourseTeacherView", "Account",
+                                                   new { id = Model.Id, orderBy = "firstname" },
+                                                   new { @class = "btn btn-default" })
+</div>
+
+
+<div>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -50,33 +60,25 @@
         </dt>
 
         <dd>
-            <br />
-            <table class="module">
-                <tr>
-                    <th>Name</th>
-                    <th>Start date</th>
-                    <th>End date</th>
-                </tr>
+            <table>
                 @if (User.IsInRole("student"))
                 {
                     foreach (var module in Model.Modules)
                     {
                         <tr>
-                            <td>
+                            <td class="tablemargin">
                                 @Html.ActionLink(@module.Name, "Details", "Modules",
                                                  new { id = module.Id, courseID = Model.Id },
                                                  null)
                             </td>
-                            <td>
-                                @module.StartDate.ToShortDateString()
+                            <td class="tablemargin">
+                                @module.StartDate.ToShortDateString() - @module.EndDate.ToShortDateString()
                             </td>
-                            <td>
-                                @module.EndDate.ToShortDateString()
-                            </td>
+                            <td class="tablemargin">@module.Days days</td>
                         </tr>
                     }
-                    <tr class="button">
-                        <td>
+                    <tr>
+                        <td class="tablemargin">
                             <div>
                                 @Html.ActionLink("Show students", "CourseTeacherView", "Account",
                                                  new { id = Model.Id, orderBy = "firstname" },
@@ -90,36 +92,28 @@
                     foreach (var module in Model.Modules)
                     {
                         <tr>
-                            <td>
+                            <td class="tablemargin">
                                 @Html.ActionLink(@module.Name, "Details", "Modules", 
                                                  new { id = module.Id, courseID = Model.Id }, 
                                                  null)
                             </td>
-                            <td>
-                                @module.StartDate.ToShortDateString()
+                            <td class="tablemargin">
+                                @module.StartDate.ToShortDateString() - @module.EndDate.ToShortDateString()
                             </td>
-                            <td>
-                                @module.EndDate.ToShortDateString()
-                            </td>
-                            <td>
+                            <td class="tablemargin">@module.Days days</td>
+                            <td class="tablemargin">
                                 @Html.ActionLink("Edit", "Edit", "Modules", new { id = module.Id }, null) |
                                 @Html.ActionLink("Delete", "Delete", "Modules", new { id = module.Id, courseID = Model.Id }, null)
                             </td>
-                            <td>
+                            @if (Model.StartDate > module.StartDate || Model.EndDate < module.EndDate || module.StartDate > module.EndDate)
+                            {
+                                <td class="tablemargin">
+                                    Some dates are out of boundry!
+                                </td>
+                            }
                         </tr>
                     }
-                    <tr class="button">
-                        <td>
-                             <div>
-                                 @Html.ActionLink("Add module", "Create", "Modules", 
-                                                   new { id = Model.Id, name = Model.Name }, 
-                                                   new { @class = "btn btn-default" })
-                                 @Html.ActionLink("Add student", "CourseTeacherView", "Account",
-                                                   new { id = Model.Id, orderBy ="firstname"},
-                                                   new { @class = "btn btn-default" })
-                             </div>
-                        </td>
-                    </tr>
+
                 }
             </table>
         </dd>
@@ -131,5 +125,5 @@
 {
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) <span>|</span>
 }
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Course List", "Index")
 </p>
